<resources>
    <string name="app_name">My Souk</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Jyothish N</string>
    <string name="nav_header_subtitle">jyothishn@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_favorites">My Favourites</string>
    <string name="menu_myorders">My Orders</string>
    <string name="menu_mycart">My Cart</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_location">Location Preference</string>
    <string name="menu_wallet">My Wallet</string>
    <string name="menu_select">Select Category</string>
    <string name="menu_privacy">Privacy Policy</string>
    <string name="menu_about">About My Souk</string>
</resources>