<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single"
        android:id="@+id/nav_top">
        <item
            android:id="@+id/nav_select"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_select" />
        <item
            android:id="@+id/nav_location"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_location" />
        <item
            android:id="@+id/nav_wallet"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_wallet" />
        <item
            android:id="@+id/nav_favourite"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_favorites" />
        <item
            android:id="@+id/nav_myOrders"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_myorders" />
        <item
            android:id="@+id/nav_myCart"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_mycart" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_settings" />
    </group>

    <group android:checkableBehavior="single"
        android:id="@+id/nav_bottom">
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/privacy"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_privacy" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_about" />
    </group>
</menu>