<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">
    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.mysouk.ui.home.HomeFragment"
        android:label="@string/menu_select"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_select"
        android:name="com.example.mysouk.ui.home.HomeFragment"
        android:label="@string/menu_select"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_location"
        android:name="com.example.mysouk.ui.home.HomeFragment"
        android:label="@string/menu_location"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_wallet"
        android:name="com.example.mysouk.ui.home.HomeFragment"
        android:label="@string/menu_wallet"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_favourite"
        android:name="com.example.mysouk.ui.gallery.GalleryFragment"
        android:label="@string/menu_favorites"
        tools:layout="@layout/fragment_gallery" />
    <fragment
        android:id="@+id/nav_myOrders"
        android:name="com.example.mysouk.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_myorders"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_myCart"
        android:name="com.example.mysouk.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_mycart"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.mysouk.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_slideshow" />
        <fragment
            android:id="@+id/nav_gallery"
            android:name="com.example.mysouk.ui.slideshow.SlideshowFragment"
            android:label="@string/menu_gallery"
            tools:layout="@layout/fragment_gallery" />
        <fragment
            android:id="@+id/privacy"
            android:name="com.example.mysouk.ui.slideshow.SlideshowFragment"
            android:label="@string/menu_privacy"
            tools:layout="@layout/fragment_gallery" />
        <fragment
            android:id="@+id/nav_about"
            android:name="com.example.mysouk.ui.slideshow.SlideshowFragment"
            android:label="@string/menu_about"
            tools:layout="@layout/fragment_gallery" />

</navigation>